Disabled auto-configuration of recorder devices for ShareX

--- a/sharex.wxs
+++ b/sharex.wxs
@@ -8,18 +8,21 @@
              InstallPrivileges="elevated"
              InstallScope="perMachine" />
 
+    <!--
     <Property Id="MSVCP2010REDITSEXISTS">
       <DirectorySearch Id="System32FolderSearch" Path="[WindowsFolder]system32">
         <FileSearch Id="msvcp100" Name="msvcp100.dll"/>
       </DirectorySearch>
     </Property>
+    -->
 
     <ComponentGroupRef Id="ShareXDirectory"/>
     <Directory Id="TARGETDIR" Name="SourceDir">
-      <Directory Id="WindowsFolder" />
+      <!-- <Directory Id="WindowsFolder" /> -->
       <Directory Id="ShareXDirectory" />
     </Directory>
 
+    <!--
     <CustomAction Id="InstallVC2010Redist"
                   ExeCommand="[ShareXDirectory]\sharex-portable\vcredist_x64.exe /sp /silent /norestart"
                   Directory="ShareXDirectory" Execute="deferred"
@@ -40,6 +43,7 @@
       <Custom Action="SetupRecorderDevices" After="InstallFiles">NOT REMOVE</Custom>
       <Custom Action="ConfigureShareX" After="SetupRecorderDevices">NOT REMOVE</Custom>
     </InstallExecuteSequence>
+    -->
 
   </Module>
 </Wix>
